# Segtree

./: .gitignore  .main.cpp.swp  .segtree.cpp.swp  .segtree.h.swp  CMakeLists.txt  Makefile  README.md  a.out  main.cpp  performance_testing.cpp  segtree.cpp  segtree.h
docs/: PerformanceAnalysis.md  TODOs.md  Testing.md
docs/data/: averager.py  data_1_10.txt  data_1_100.txt  data_1_1000.txt  data_1_10000.txt  data_2_10.txt  data_2_100.txt  data_2_1000.txt  data_2_10000.txt  data_3_10.txt  data_3_100.txt  data_3_1000.txt  data_3_10000.txt  datax_1_100000.txt  datax_1_1000000.txt  datax_2_100000.txt  datax_2_1000000.txt  datax_3_100000.txt  datax_3_1000000.txt  plotter.m
src/: .segtree.cpp.swp  segtree.cpp
testing/: .tests.cpp.swp  performance_tests.cpp  tests.cpp
