cmake_minimum_required (VERSION 2.6)
set (CMAKE_CXX_STANDARD 11)
project (SegTree)
include_directories(inc src)
add_executable(example1 src/segtree.cpp examples/main.cpp)
add_executable(unittests src/segtree.cpp testing/unit_tests.cpp)
add_executable(performancetests src/segtree.cpp testing/performance_tests.cpp)
